--- a/app/src/main/res/layout/todolist_layout.xml
+++ b/app/src/main/res/layout/todolist_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="414dp"
         android:gravity="center"
         android:paddingTop="25sp"
-        android:text="Test Test Test"
+        android:text="To-Do List"
         android:textSize="25sp" />
 
 </LinearLayout>
