--- a/app/src/main/res/layout/todolist_layout.xml
+++ b/app/src/main/res/layout/todolist_layout.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="50dp"
     tools:context=".MainActivity">
-
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center">
     <TextView
-        android:id="@+id/greet"
+        android:id="@+id/emptyList"
         android:layout_width="fill_parent"
         android:layout_height="414dp"
         android:gravity="center"
         android:paddingTop="25sp"
-        android:text="To-Do List"
+        android:text="@string/todolist_emptylist"
         android:textSize="25sp" />
-
-</LinearLayout>
+    <ListView
+        android:id="@android:id/list"
+        android:background="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </ListView>
+</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_add_black_24dp"
+        android:backgroundTint="@color/colorAdd"
+        android:layout_margin="16dp" />
+</FrameLayout>
