todolist CRUD completed

--- a/app/src/main/res/layout/todolisttask_item.xml
+++ b/app/src/main/res/layout/todolisttask_item.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/ibTaskRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,15 +30,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_clear_black_24dp" />
 
-    <ImageButton
-        android:id="@+id/ibTaskEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ibTaskRemove"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_edit_black_24dp" />
 </android.support.constraint.ConstraintLayout>
