--- a/app/src/main/res/layout/tasklistdialog_layout.xml
+++ b/app/src/main/res/layout/tasklistdialog_layout.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/tvHeader"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:text="@string/todolist_updatedialogheader"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="0dp"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="0dp"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
     <View
         android:id="@+id/line"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +34,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line" />
 
@@ -41,9 +43,9 @@
         android:id="@+id/lvTasks"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,13 +54,15 @@
 
     <Button
         android:id="@+id/btnCancel"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="148dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="10dp"
-        android:text="@string/todolist_cancel"
+        android:text="@string/close"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lvTasks" />
 
