--- a/app/src/main/res/layout/reminder_layout.xml
+++ b/app/src/main/res/layout/reminder_layout.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/greet"
-        android:layout_width="fill_parent"
-        android:layout_height="414dp"
-        android:gravity="center"
-        android:paddingTop="25sp"
-        android:text="Reminders"
-        android:textSize="25sp" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_gravity="right"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/baseline_add_circle_black_48dp" />
 
 </LinearLayout>
