--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -10,6 +10,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".AddReminderActivity">
 
+    <ListView
+        android:id="@android:id/list"
+        android:background="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+    </ListView>
+
     <TextView
         android:id="@+id/nameTxt"
         android:layout_width="wrap_content"
@@ -94,6 +102,17 @@
         android:text="Add Reminder"
         android:textAppearance="?android:attr/textAppearanceLarge"  />
 
+    <Button
+        android:id="@+id/cancelBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp"
+        android:layout_toLeftOf="@+id/submitBtn"
+        android:text="Cancel"
+        android:textAppearance="?android:attr/textAppearanceLarge"  />
+
     <ImageView
         android:id="@+id/repeatimg"
         android:layout_width="wrap_content"
@@ -102,4 +121,68 @@
         android:layout_below="@+id/in_time"
         android:src="@drawable/round_refresh_black_24dp" />
 
+    <CheckBox
+        android:id="@+id/chkMon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="30dp"
+        android:layout_below="@id/in_time"
+        android:text="@string/reminderlist_repeatmon"
+        android:checked="true"  />
+
+    <CheckBox
+        android:id="@+id/chkTue"
+        android:layout_below="@id/chkMon"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_marginLeft="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reminderlist_repeattue"/>
+
+    <CheckBox
+        android:id="@+id/chkWed"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_below="@id/chkTue"
+        android:text="@string/reminderlist_repeatwed" />
+
+    <CheckBox
+        android:id="@+id/chkThu"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_below="@id/chkWed"
+        android:layout_marginLeft="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reminderlist_repeatthu" />
+
+    <CheckBox
+        android:id="@+id/chkFri"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_below="@id/chkThu"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_height="wrap_content"
+        android:text="@string/reminderlist_repeatfri" />
+
+    <CheckBox
+        android:id="@+id/chkSat"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_below="@id/chkFri"
+        android:layout_marginLeft="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reminderlist_repeatsat" />
+
+    <CheckBox
+        android:id="@+id/chkSun"
+        android:layout_toRightOf="@+id/repeatimg"
+        android:layout_below="@id/chkSat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:text="@string/reminderlist_repeatsun" />
 </RelativeLayout>
