--- a/app/src/main/res/layout/reminder_layout.xml
+++ b/app/src/main/res/layout/reminder_layout.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="50dp"
     tools:context=".MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:scrollbars="vertical" />
-
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+        <TextView
+            android:id="@+id/emptyReminderList"
+            android:layout_width="fill_parent"
+            android:layout_height="414dp"
+            android:gravity="center"
+            android:paddingTop="25sp"
+            android:text="@string/reminderlist_emptylist"
+            android:textSize="25sp" />
+        <ListView
+            android:id="@android:id/list"
+            android:background="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </ListView>
+    </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addBtn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:layout_gravity="right"
-        android:layout_marginEnd="20dp"
-        android:src="@drawable/baseline_add_circle_black_48dp" />
-
-</LinearLayout>
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_add_black_24dp"
+        android:backgroundTint="@color/colorAdd"
+        android:layout_margin="16dp" />
+</FrameLayout>
